@startuml

'theme 목록 : https://plantuml.com/ko/theme'
'skinparam 목록 : https://plantuml.com/ko/skinparam'
skinparam ClassFontSize 20
skinparam ClassFontColor Black
skinparam ClassAttributeFontSize 15
skinparam ArrowColor Black
skinparam ArrowThickness 2

hide empty methods
hide empty fields

class NetCore {
    + void ProcessGameLoop()
    + void Update()
}

class GameServer {

}

class GameSession {
    - Player
}

class World {
    + Initialize()
    + void Update() override;
    --
    - List<Player>
    - List<Channel>
    - List<ChannelLobby>
}

class Channel {
    + void Update() override;
    --
    - List<Player>
    - BattleFieldRoutine
}

class ChannelLobby {
    - List<Player>
}

class Room {
    - List<Player>
}

class Player<<ObjectPool>> {

}

class Character<<ObjectPool>> {

}

class BattleFieldRoutine {
    + OnUpdate()
}

NetCore --> World
World *-r-> Channel
World *--> ChannelLobby
Channel -r-> BattleFieldRoutine
ChannelLobby *--> Room
World *.r.> Player
Channel *.r.> Player
ChannelLobby *.r.> Player
Room *.r.> Player
Player -d-> Character

GameServer *-l-> GameSession
GameSession -l-> Player



@enduml